fixed spacing issue, contact icons now links too

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -48,11 +48,6 @@
         height: auto;
     }
 
-    /*.contactTable td {
-        display: table-column;
-        height: auto;
-    }*/
-
     td .emptyLine {
         display: block;
     }
